# descartes

./: LICENSE  README.md  descartes.opam  dune-project
.github/workflows/: opam-dependency-submission.yml  workflow.yml
lib/: ast.ml  ctx.ml  dune  err.ml  eval.ml  eval_defun.ml  lexer.mll  parser.mly  tc.ml
test/: dune  test_descartes.ml
